# aaa-datasets-in-cv

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  jupyter_notebook_config.py  pyproject.toml
plate_gen/: rus_black.py  rus_blue.py  rus_random_plate.py  rus_red_long.py  rus_red_short.py  rus_white_long.py  rus_white_short.py  rus_yellow.py
