[tool.poetry]
name = "aaa-cv"
version = "0.0.1"
description = "Проект по генерации данных и обучению картиночных моделей"
authors = ["Item2Param <avito-cv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.9,<3.12"
numpy = "^1.22.2"
pandas = "1.5.3"
torch = ">=2.0.0,<2.3.0"
timm = ">=1.0.9"
albumentations = ">1.0"
opencv-python-headless = "4.10.0.84"
opencv-fixer = "0.2.5"
tqdm = "4.66.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"